Adicionado script https
.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<script>
+  window.location.replace("https://www.cotascontempladas.com");
+</script>
 <html>
 	<head>
 		<title>Solicite um orçamento!</title>
