--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <script>
-  window.location.replace("https://www.cotascontempladas.com");
+  window.location.replace("https://www.corretordeseguroscwb.com.br");
 </script>
 <html>
 	<head>
