--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </ul>
 
         <h2>Como Contribuir</h2>
-        <p>Gostaria de contribuir com esse projeto? Você pode enviar sugestões, correções ou até mesmo criar seu próprio conteúdo para esse blog. Sinta-se à vontade para abrir uma "issue" ou enviar um "pull request" em meu repositório no <a href="https://github.com/suacorretoradeseguros">GitHub</a>.</p>
+        <p>Gostaria de contribuir com esse projeto? Você pode enviar sugestões, correções ou até mesmo criar seu próprio conteúdo para esse blog. Sinta-se à vontade para abrir uma "issue" ou enviar um "pull request" em meu repositório no <a href="https://github.com/willf444/willf444.github.io">GitHub</a>.</p>
 
         <h2>Contato</h2>
         <p>Fale comigo para obter mais informações sobre os serviços de seguros, para esclarecer suas dúvidas e solicitar cotações.</p>
