--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p>E outros ramos de seguros...</p>
 
         <h2>Principais Seguradoras Parceiras</h2>
-        <img src="https://github.com/willf444/willf444.github.io/blob/main/Captura%20de%20tela%20de%202023-09-09%2019-54-16.png" alt="Imagem das principais seguradoras parceiras">
+        <img src="https://raw.githubusercontent.com/willf444/willf444.github.io/main/Captura%20de%20tela%20de%202023-09-09%2019-54-16.png" alt="Imagem das principais seguradoras parceiras">
             
         <h2>Blog</h2>
         <p>Material de referência.</p>
