--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <h3>Últimas Publicações</h3>
         <ul>
-            <li><a href="link_para_o_artigo_1.html">Por que fazer seguro residencial?</a> - Leia e vai entender os principais benefícios, verá que com um valor muito baixo anual, você pode proteger seu patrimônio.</li>
+            <li><a href="residencial.html">Por que fazer seguro residencial?</a> - Leia e vai entender os principais benefícios, verá que com um valor muito baixo anual, você pode proteger seu patrimônio.</li>
             <li><a href="link_para_o_artigo_2.html">Seguro Auto</a> - Entenda como funciona o bônus e como se beneficiar e obter descontos</li>
             <li><a href="link_para_o_artigo_3.html">Consórcio</a> - Como funciona, principais vantagens e um comparativo consórcio x financiamento.</li>
         </ul>
