--- a/residencial.html
+++ b/residencial.html
@@ -119,7 +119,7 @@
         <p>Para saber mais sobre como podemos personalizar um plano que atenda às suas necessidades específicas, <a href="https://wa.me/55041996891104">fale agora com um corretor especializado</a>. Garanta a segurança do seu lar e a paz de espírito que você merece.</p>
 
         <div class="back-button">
-            <a href="link_para_o_artigo_1.html">Voltar</a>
+            <a href="index.html">Voltar</a>
         </div>
     </div>
 </body>
