--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <h2>Redes Sociais</h2>
         
         <ul>
-            <li><a href="wa.me/55041996891104">WhatsApp</a></li>
+            <li><a href="https://wa.me/55041996891104">WhatsApp</a></li>
             <li><a href="https://www.linkedin.com/in/willian-ferreira-58b256146/">LinkedIn</a></li>
         </ul>
             <h2>Corretor Autorizado</h2>
