--- a/index.html
+++ b/index.html
@@ -53,6 +53,15 @@
         a:hover {
             text-decoration: underline;
         }
+         .parceiros-image {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        .parceiros-image img {
+            max-width: 100%;
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -75,7 +84,9 @@
         <p>E outros ramos de seguros...</p>
 
         <h2>Principais Seguradoras Parceiras</h2>
+         <div class="parceiros-image">
         <img src="Captura de tela de 2023-09-09 19-54-16.png">
+             </div>
             
         <h2>Blog</h2>
         <p>Material de referência.</p>
