--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <h2>Contato</h2>
         <p>Fale comigo para obter mais informações sobre os serviços de seguros, para esclarecer suas dúvidas e solicitar cotações.</p>
         <ul>
-            <li><a href="mailto:willian@corretordeseguroscwb.com.br"Email:>willian@corretordeseguroscwb.com.br</a></li>
+            <li>E-mail: <a href="mailto:willian@corretordeseguroscwb.com.br">willian@corretordeseguroscwb.com.br</a></li>
             <li>Telefone: (41) 99689-1104</li>
             
         </ul>
