--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <div class="container">
         <h2>Sobre Mim</h2>
-        <p>Sou corretor de seguros habilitado pela SUSEP para atuar em todos os ramos de seguros, comprometido com os seus interesses e não os da seguradora ou do banco, e ofereço soluções de seguro personalizadas e confiáveis para todos meus clientes. Lembre-se, seguro só com corretor de seguros! </p>
+        <p>Sou corretor de seguros habilitado pela SUSEP para atuar em todos os ramos de seguros, comprometido primeiramente com os seus interesses, obviamente sempre atuando com responsabilidade e ética, ofereço soluções de seguro personalizadas e confiáveis para todos meus clientes. Prezando sempre pela qualidade e transparência nas negociações, afim de que todos saiam ganhando. Lembre-se, seguro só com corretor de seguros! </p>
 
         <h2>Principais Serviços</h2>
         <ul>
